// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Test Vest's \`test\` function > test params > creates a test with a message and with a key 1`] = `"[{"$type":"Test","data":{"severity":"error","testStatus":"PASSING","fieldName":"field_name","message":"failure message"},"status":"DONE","key":"keyboardcat"},{}]"`;

exports[`Test Vest's \`test\` function > test params > creates a test without a key 1`] = `
{
  "$type": "Test",
  "abortController": AbortController {},
  "allowReorder": undefined,
  "children": null,
  "data": {
    "fieldName": "field_name",
    "message": "failure message",
    "severity": "error",
    "testFn": [Function],
    "testStatus": "PASSING",
  },
  "key": null,
  "keys": null,
  "output": undefined,
  "parent": {
    "$type": "Suite",
    "abortController": AbortController {},
    "allowReorder": undefined,
    "children": [
      {
        "$type": "Focused",
        "abortController": AbortController {},
        "allowReorder": undefined,
        "children": null,
        "data": {
          "focusMode": 0,
          "match": [],
          "matchAll": false,
        },
        "key": null,
        "keys": null,
        "output": undefined,
        "parent": [Circular],
        "status": "DONE",
      },
      [Circular],
      {
        "$type": "Reorderable",
        "abortController": AbortController {},
        "allowReorder": true,
        "children": null,
        "data": {},
        "key": null,
        "keys": null,
        "output": undefined,
        "parent": [Circular],
        "status": "DONE",
      },
    ],
    "data": {
      "optional": {},
      "resolver": [Function],
    },
    "key": null,
    "keys": null,
    "output": {
      "dump": [Function],
      "errorCount": 0,
      "errors": [],
      "getError": [Function],
      "getErrors": [Function],
      "getErrorsByGroup": [Function],
      "getMessage": [Function],
      "getWarning": [Function],
      "getWarnings": [Function],
      "getWarningsByGroup": [Function],
      "groups": {},
      "hasErrors": [Function],
      "hasErrorsByGroup": [Function],
      "hasWarnings": [Function],
      "hasWarningsByGroup": [Function],
      "isPending": [Function],
      "isTested": [Function],
      "isValid": [Function],
      "isValidByGroup": [Function],
      "pendingCount": 0,
      "testCount": 1,
      "tests": {
        "field_name": SummaryBase {
          "errorCount": 0,
          "errors": [],
          "pendingCount": 0,
          "testCount": 1,
          "valid": true,
          "warnCount": 0,
          "warnings": [],
        },
      },
      "types": undefined,
      "valid": true,
      "value": undefined,
      "warnCount": 0,
      "warnings": [],
    },
    "parent": null,
    "status": "DONE",
  },
  "status": "DONE",
}
`;

exports[`Test Vest's \`test\` function > test params > creates a test without a message and with a key 1`] = `
{
  "$type": "Test",
  "abortController": AbortController {},
  "allowReorder": undefined,
  "children": null,
  "data": {
    "fieldName": "field_name",
    "severity": "error",
    "testFn": [Function],
    "testStatus": "PASSING",
  },
  "key": "keyboardcat",
  "keys": null,
  "output": undefined,
  "parent": {
    "$type": "Suite",
    "abortController": AbortController {},
    "allowReorder": undefined,
    "children": [
      {
        "$type": "Focused",
        "abortController": AbortController {},
        "allowReorder": undefined,
        "children": null,
        "data": {
          "focusMode": 0,
          "match": [],
          "matchAll": false,
        },
        "key": null,
        "keys": null,
        "output": undefined,
        "parent": [Circular],
        "status": "DONE",
      },
      [Circular],
      {
        "$type": "Reorderable",
        "abortController": AbortController {},
        "allowReorder": true,
        "children": null,
        "data": {},
        "key": null,
        "keys": null,
        "output": undefined,
        "parent": [Circular],
        "status": "DONE",
      },
    ],
    "data": {
      "optional": {},
      "resolver": [Function],
    },
    "key": null,
    "keys": {
      "keyboardcat": [Circular],
    },
    "output": {
      "dump": [Function],
      "errorCount": 0,
      "errors": [],
      "getError": [Function],
      "getErrors": [Function],
      "getErrorsByGroup": [Function],
      "getMessage": [Function],
      "getWarning": [Function],
      "getWarnings": [Function],
      "getWarningsByGroup": [Function],
      "groups": {},
      "hasErrors": [Function],
      "hasErrorsByGroup": [Function],
      "hasWarnings": [Function],
      "hasWarningsByGroup": [Function],
      "isPending": [Function],
      "isTested": [Function],
      "isValid": [Function],
      "isValidByGroup": [Function],
      "pendingCount": 0,
      "testCount": 1,
      "tests": {
        "field_name": SummaryBase {
          "errorCount": 0,
          "errors": [],
          "pendingCount": 0,
          "testCount": 1,
          "valid": true,
          "warnCount": 0,
          "warnings": [],
        },
      },
      "types": undefined,
      "valid": true,
      "value": undefined,
      "warnCount": 0,
      "warnings": [],
    },
    "parent": null,
    "status": "DONE",
  },
  "status": "DONE",
}
`;

exports[`Test Vest's \`test\` function > test params > creates a test without a message and without a key 1`] = `
{
  "$type": "Test",
  "abortController": AbortController {},
  "allowReorder": undefined,
  "children": null,
  "data": {
    "fieldName": "field_name",
    "severity": "error",
    "testFn": [Function],
    "testStatus": "PASSING",
  },
  "key": null,
  "keys": null,
  "output": undefined,
  "parent": {
    "$type": "Suite",
    "abortController": AbortController {},
    "allowReorder": undefined,
    "children": [
      {
        "$type": "Focused",
        "abortController": AbortController {},
        "allowReorder": undefined,
        "children": null,
        "data": {
          "focusMode": 0,
          "match": [],
          "matchAll": false,
        },
        "key": null,
        "keys": null,
        "output": undefined,
        "parent": [Circular],
        "status": "DONE",
      },
      [Circular],
      {
        "$type": "Reorderable",
        "abortController": AbortController {},
        "allowReorder": true,
        "children": null,
        "data": {},
        "key": null,
        "keys": null,
        "output": undefined,
        "parent": [Circular],
        "status": "DONE",
      },
    ],
    "data": {
      "optional": {},
      "resolver": [Function],
    },
    "key": null,
    "keys": null,
    "output": {
      "dump": [Function],
      "errorCount": 0,
      "errors": [],
      "getError": [Function],
      "getErrors": [Function],
      "getErrorsByGroup": [Function],
      "getMessage": [Function],
      "getWarning": [Function],
      "getWarnings": [Function],
      "getWarningsByGroup": [Function],
      "groups": {},
      "hasErrors": [Function],
      "hasErrorsByGroup": [Function],
      "hasWarnings": [Function],
      "hasWarningsByGroup": [Function],
      "isPending": [Function],
      "isTested": [Function],
      "isValid": [Function],
      "isValidByGroup": [Function],
      "pendingCount": 0,
      "testCount": 1,
      "tests": {
        "field_name": SummaryBase {
          "errorCount": 0,
          "errors": [],
          "pendingCount": 0,
          "testCount": 1,
          "valid": true,
          "warnCount": 0,
          "warnings": [],
        },
      },
      "types": undefined,
      "valid": true,
      "value": undefined,
      "warnCount": 0,
      "warnings": [],
    },
    "parent": null,
    "status": "DONE",
  },
  "status": "DONE",
}
`;
